# guillotine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOUNDATION.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: generated-dsl-contract.md  oss-readiness.md  quickstart.md  release.md  security-model.md
examples/: README.md
src/guillotine/: __init__.py  build.py  cli.py  report.py
src/guillotine/emit/: __init__.py  mcp.py  python.py  skills.py
src/guillotine/ingest/: __init__.py  openapi.py
src/guillotine/ir/: __init__.py  model.py
src/guillotine/runtime/: __init__.py  executor.py
tests/: test_cli_and_runtime.py  test_emit_python.py  test_openapi_ingest.py
tests/fixtures/: todo_openapi.yaml
